--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,12 @@
 <%- include("partials/header") %>
 <h1>Compose</h1>
-<form action="">
-	<input type="text" name="compose" value="" />
-	<button type="submit">Publish</button>
+<form action="/compose" method="POST">
+	<div class="form-group">
+		<label>Title</label>
+		<input class="form-control" type="text" name="postTitle" value="" />
+		<label>Post</label>
+		<textarea class="form-control" type="text" name="postBody" value="" rows="5"></textarea>
+	</div>
+	<button type="submit" class="btn btn-primary publish-btn">Publish</button>
 </form>
 <%- include("partials/footer") %>
